--- a/manifest.json
+++ b/manifest.json
@@ -13,7 +13,8 @@
   "permissions": [
     "tabs",
     "storage",
-    "clipboardRead"
+    "clipboardRead",
+    "notifications"
   ],
 
   "background": {
